# stm32f1xx-template

./: Cargo.toml  Embed.toml
.cargo/: config
src/: main.rs
