[package]
authors = ["Andres O. Vela"]
edition = "2018"
readme = "README.md"
name = "template"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.4"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }


[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["stm32f103"]

# this lets you use `cargo fix`!
[[bin]]
name = "template"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
